Added a Vehicle header file to my program. I also made some cin and cout statements to the main function.

--- a/Inheritance/Inheritance.vcxproj
+++ b/Inheritance/Inheritance.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="Ogayonne_JonLuke_Inheritance.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Vehicle.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
