I update the program to give and retrieve data for the Car class header which was also created.

--- a/Inheritance/Inheritance.vcxproj
+++ b/Inheritance/Inheritance.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="Ogayonne_JonLuke_Inheritance.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Car.h" />
     <ClInclude Include="Vehicle.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
