--- a/Inheritance/Inheritance.vcxproj.filters
+++ b/Inheritance/Inheritance.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Vehicle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Car.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
